[LRN-0022] fix the overlapping cards

--- a/src/app/courses/landing/landing.component.scss
+++ b/src/app/courses/landing/landing.component.scss
@@ -1,64 +1,73 @@
 .content {
   margin: var(--space-xl) auto;
-  min-height: 20em;
-  .flip-card-inner {
-    transform-style: preserve-3d;
-  }
+  .card {
+    min-height: 20em;
 
-  .flip-card-inner > div {
-    position: absolute;
-    width: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
-    backface-visibility: hidden;
-  }
-
-
-  .flip-card-front { }
-
-  .flip-card-back {
-    transform: rotateY(180deg);
-  }
-
-  .mat-card {
-    margin-bottom: var(--space-xxl);
-    @media screen and (max-width: 600px) {
-      margin-bottom: var(--space-lg);
+    .flip-card-inner {
+      transform-style: preserve-3d;
     }
-    @media screen and (min-width: 601px) and (max-width: 1280px) {
-      margin-bottom: var(--space-xl);
+
+    .flip-card-inner > div {
+      position: absolute;
+      width: 100%;
+      -webkit-backface-visibility: hidden; /* Safari */
+      backface-visibility: hidden;
     }
-    .mat-card-avatar {
-      background: url("../../../assets/images/logo.png") no-repeat center center;
-      background-size: contain;
-      border: 1px dashed;
+
+    .flip-card-front {
     }
-    .mat-card-image {
-      min-height: 7em;
+
+    .flip-card-back {
+      transform: rotateY(180deg);
+    }
+
+    .mat-card {
+      margin-bottom: var(--space-xxl);
       @media screen and (max-width: 600px) {
-        min-height: 10em;
+        margin-bottom: var(--space-lg);
       }
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center center;
-    }
-    .mat-card-header {
-      font-family: 'Titillium Web', sans-serif;
-      .mat-card-title {
-        font-weight: 700;
-        font-size: 1em;
-        margin-bottom: var(--space-xxs);
-        color: var(--color-grey4);
+      @media screen and (min-width: 601px) and (max-width: 1280px) {
+        margin-bottom: var(--space-xl);
       }
-      .mat-card-subtitle {
-        font-weight: 400;
-        font-size: 0.8em;
-        letter-spacing: var(--space-xxs);
-        color: var(--color-grey9);
+
+      .mat-card-avatar {
+        background: url("../../../assets/images/logo.png") no-repeat center center;
+        background-size: contain;
+        border: 1px dashed;
       }
-    }
-    .mat-card-content {
-      font-family: 'Titillium Web', sans-serif;
-      color: var(--color-grey7);
+
+      .mat-card-image {
+        min-height: 7em;
+        @media screen and (max-width: 600px) {
+          min-height: 10em;
+        }
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+      }
+
+      .mat-card-header {
+        font-family: 'Titillium Web', sans-serif;
+
+        .mat-card-title {
+          font-weight: 700;
+          font-size: 1em;
+          margin-bottom: var(--space-xxs);
+          color: var(--color-grey4);
+        }
+
+        .mat-card-subtitle {
+          font-weight: 400;
+          font-size: 0.8em;
+          letter-spacing: var(--space-xxs);
+          color: var(--color-grey9);
+        }
+      }
+
+      .mat-card-content {
+        font-family: 'Titillium Web', sans-serif;
+        color: var(--color-grey7);
+      }
     }
   }
 }
